@@ -1,26 +1,23 @@
-val kotlinVersion = "1.3.50"
-val graalVersion = "19.2.0"
-
 plugins {
     kotlin("jvm") version "1.3.50"
     kotlin("kapt") version "1.3.50"
     antlr
 }
 
-fun truffle(module: String) = "org.graalvm.truffle:truffle-$module:19.3.0"
-
 dependencies {
+    val truffleVersion = "19.3.0"
 
     antlr("org.antlr:antlr4:4.7.2")
 
+    implementation("org.graalvm.truffle:truffle-api:${truffleVersion}")
     implementation(kotlin("stdlib"))
-    implementation(kotlin("reflect")) // Only for the instantiate hack
-    implementation(truffle("api"))
+    implementation(kotlin("reflect"))
 
-    kapt(truffle("dsl-processor"))
+    kapt("org.graalvm.truffle:truffle-dsl-processor:${truffleVersion}")
 
     testImplementation(kotlin("test-junit"))
-    testImplementation("org.junit.jupiter:junit-jupiter:5.5.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.2")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.5.2")
 }
 
 sourceSets {
@@ -38,15 +35,35 @@ tasks.compileKotlin {
         sourceCompatibility = JavaVersion.VERSION_11
         targetCompatibility = JavaVersion.VERSION_11
     }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_11.toString()
+    }
+}
+
+tasks.compileTestKotlin {
+    java {
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_11.toString()
+    }
 }
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs(
+        "-Dtruffle.class.path.append=${sourceSets.main.get().runtimeClasspath.asPath}",
+        "--add-exports=org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED",
+        "--add-exports=org.graalvm.truffle/com.oracle.truffle.api.source=ALL-UNNAMED",
+        "--add-exports=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED")
 }
 
 tasks.jar {
     group = "build"
-    archiveBaseName.set("brj-language")
+    archiveFileName.set("brj-language.jar")
 
     from(configurations.runtimeClasspath.get().map { if (it.isDirectory) it else zipTree(it) })
 }
